# MovieMonkey

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs
src/health/: mod.rs
src/movies/: handlers.rs  mod.rs  models.rs  services.rs
