[package]
name = "movie_monkey"
version = "0.1.0"
edition = "2021"
authors = ["André Wozniack <andre_fabriciow@hotmail.com>"]

[lib]
path = "src/lib.rs"
name = "movie_monkey"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = "0.8.2"
tokio = "1.40.0"
thiserror = "1.0.63"
log = "0.4.22"
